[tool.poetry]
name = "repl_python3_CapuBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
async-timeout = "^3.0.1"
Flask = "^2.0.1"
pandas = "^1.3.2"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
spotipy = "^2.19.0"
bs4 = "^0.0.1"
config = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
